# ARCH2026-Kanga

./: README.md
kanga_arm/: README.md
kanga_arm/kanga_arm_controller/: README.md
kanga_arm/kanga_arm_description/: README.md
kanga_auto/: README.md
kanga_auto/kanag_aruco_detection/: README.md
kanga_auto/kanga_cube_detection/: README.md
kanga_auto/kanga_localisation/: README.md
kanga_auto/kanga_nav2/: README.md
kanga_auto/kanga_slam/: README.md
kanga_auto/kanga_supervisor/: README.md
kanga_bringup/: CMakeLists.txt  README.md  package.xml
kanga_bringup/launch/: onboard_drive.launch.py
kanga_description/: README.md
kanga_drive/: CMakeLists.txt  README.md  package.xml
kanga_drive/config/: odrive_node_ids.yaml
kanga_drive/launch/: drive_with_mapper.launch.py  odrive_multi.launch.py
kanga_drive/src/: wheel_command_mapper.cpp
kanga_hardware/: README.md
kanga_hardware/kanga_battery/: CMakeLists.txt  README.md  package.xml
kanga_hardware/kanga_battery/include/: daly_can_node.hpp
kanga_hardware/kanga_battery/launch/: daly_launch.yaml
kanga_hardware/kanga_battery/msg/: BatteryInfo.msg  BmsStatus.msg
kanga_hardware/kanga_battery/src/: daly_can_node.cpp  main.cpp
kanga_hardware/kanga_cameras/: README.md
kanga_hardware/kanga_microcontroller/: README.md
kanga_hardware/kanga_odrive/: CMakeLists.txt  README.md  package.xml
kanga_hardware/kanga_odrive/include/: byte_swap.hpp  odrive_can_node.hpp
kanga_hardware/kanga_odrive/launch/: example_launch.yaml
kanga_hardware/kanga_odrive/src/: main.cpp  odrive_can_node.cpp
kanga_interfaces/: CMakeLists.txt  README.md  package.xml
kanga_rviz/: README.md
kanga_science/: README.md
kanga_science/kanga_ilmenite/: README.md
kanga_science/kanga_water_extraction/: README.md
kanga_sim/: README.md
kanga_utils/: README.md
kanga_utils/kanga_canbus/: CMakeLists.txt  README.md  package.xml
kanga_utils/kanga_canbus/src/: epoll_event_loop.cpp  socket_can.cpp
kanga_utils/kanga_onboard_control/: CMakeLists.txt  README.md  package.xml
kanga_utils/kanga_onboard_control/launch/: keyboard_joy_with_twist.launch.py
kanga_utils/kanga_onboard_control/src/: joy_to_twist.cpp
