<?xml version="1.0"?>
<package format="3">
  <name>kanga_bringup</name>
  <version>0.0.0</version>
  <description>Bringup launch files for Kanga robot</description>

  <maintainer email="TODO@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kanga_drive</exec_depend>
  <exec_depend>kanga_onboard_control</exec_depend>

   <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
