<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kanga_interfaces</name>
  <version>0.0.0</version>
  <description>Defines custom ROS 2 message types used for communication between various nodes in the kanga robot system</description>
  <maintainer email="hunter.dejong03@gmail.com">hunter</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- message dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosidl_default_runtime</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>